--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,11 @@
 {
+  "processors": ["stylelint-processor-styled-components"],
   "extends": [
     "stylelint-config-standard",
+    "stylelint-config-styled-components"
   ],
+  rules: {
+    "indentation": null
+  },
+  "syntax": "scss"
 }
