turn off eslint no-confusing-arrow rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "treebo",
   "rules": {
+    "no-confusing-arrow": ["off"],
     "import/no-extraneous-dependencies": ["off"]
   }
 }
