--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "module": "es/index.js",
   "scripts": {
     "start": "run-s storybook",
-    "storybook": "BABEL_ENV=es start-storybook -p 9000",
-    "storybook:build": "BABEL_ENV=cjs build-storybook -o docs",
+    "storybook": "NODE_ENV=es start-storybook -p 9000",
+    "storybook:build": "NODE_ENV=cjs build-storybook -o docs",
     "clean": "rimraf es lib",
     "build": "run-s clean && run-p build:es build:cjs",
-    "build:es": "BABEL_ENV=es babel src -d es --ignore *.test.js --ignore *.story.js",
-    "build:cjs": "BABEL_ENV=cjs babel src -d lib --ignore *.test.js --ignore *.story.js",
-    "prepublish": "run-p lint test build",
+    "build:es": "NODE_ENV=es babel src -d es --ignore *.test.js --ignore *.story.js",
+    "build:cjs": "NODE_ENV=cjs babel src -d lib --ignore *.test.js --ignore *.story.js",
+    "prepublishOnly": "run-p lint test build",
     "precommit": "lint-staged",
     "lint": "run-p lint:*",
     "lint:eslint": "eslint .",
     "lint:stylelint": "stylelint '**/*.js'",
-    "test": "BABEL_ENV=es jest"
+    "test": "NODE_ENV=es jest"
   },
   "files": [
     "lib/**/*",
@@ -37,9 +37,16 @@
     "babel-cli": "6.26.0",
     "babel-eslint": "8.0.2",
     "babel-jest": "21.2.0",
-    "babel-preset-treebo": "github:treebohotels/babel-preset-treebo",
+    "babel-plugin-external-helpers": "6.22.0",
+    "babel-plugin-styled-components": "1.3.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
     "eslint": "4.10.0",
-    "eslint-config-treebo": "github:treebohotels/eslint-config-treebo",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
     "husky": "0.14.3",
     "jest": "21.2.1",
     "lint-staged": "5.0.0",
