--- a/.eslintrc
+++ b/.eslintrc
@@ -11,14 +11,14 @@
     "function-paren-newline": ["error", "consistent"],
     "no-confusing-arrow": ["off"],
     "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0, "maxBOF": 0 }],
-    "no-underscore-dangle": ["off"],
     "object-curly-newline": ["error", { "consistent": true }],
     "import/no-extraneous-dependencies": ["off"],
-    "jsx-a11y/anchor-is-valid": ["off"],
     "jsx-a11y/click-events-have-key-events": ["off"],
     "jsx-a11y/label-has-for": ["error", { "required": { "every": [ "id" ] }, "allowChildren": true }],
     "jsx-a11y/no-noninteractive-element-interactions": ["off"],
     "jsx-a11y/no-static-element-interactions": ["off"],
-    "react/jsx-filename-extension": ["error", { "extensions": [".js"] }]
+    "react/forbid-prop-types": ["error", { "forbid": ["any"] }],
+    "react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
+    "react/require-default-props": ["off"]
   }
 }
