--- a/package.json
+++ b/package.json
@@ -44,9 +44,13 @@
     "babel-jest": "21.2.0",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-plugin-styled-components": "1.3.0",
+    "babel-plugin-syntax-trailing-function-commas": "6.22.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-export-extensions": "6.22.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
-    "babel-preset-stage-1": "6.24.1",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.8.0",
