--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leaf-ui",
-  "version": "0.3.2",
+  "version": "0.0.0-development",
   "description": "🍃 Leaf-UI: A react component library built using styled-components",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -8,16 +8,17 @@
     "start": "run-s storybook",
     "storybook": "NODE_ENV=es start-storybook -p 9000",
     "storybook:build": "NODE_ENV=cjs build-storybook -o docs",
-    "clean": "rimraf es lib",
-    "build": "run-s clean && run-p build:es build:cjs",
+    "build": "run-s build:clean && run-p build:es build:cjs",
+    "build:clean": "rimraf es lib",
     "build:es": "NODE_ENV=es babel src -d es --ignore *.test.js --ignore *.story.js",
     "build:cjs": "NODE_ENV=cjs babel src -d lib --ignore *.test.js --ignore *.story.js",
-    "prepublishOnly": "run-p lint test build",
     "precommit": "lint-staged",
+    "commit": "git-cz",
     "lint": "run-p lint:*",
     "lint:eslint": "eslint .",
     "lint:stylelint": "stylelint '**/*.js'",
-    "test": "NODE_ENV=es jest"
+    "test": "jest",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "files": [
     "lib/**/*",
@@ -51,6 +52,8 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
+    "commitizen": "2.9.6",
+    "cz-conventional-changelog": "2.1.0",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.8.0",
@@ -68,7 +71,8 @@
     "stylelint": "8.2.0",
     "stylelint-config-standard": "17.0.0",
     "stylelint-config-styled-components": "0.1.1",
-    "stylelint-processor-styled-components": "1.0.0"
+    "stylelint-processor-styled-components": "1.0.0",
+    "semantic-release": "8.2.0"
   },
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0.0",
@@ -77,12 +81,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/treebohotels/leaf-ui.git"
+    "url": "https://github.com/treebohotels/leaf-ui.git"
   },
   "author": "Lakshya Ranganath <lakshya.ranganath@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/treebohotels/leaf-ui/issues"
   },
-  "homepage": "https://github.com/treebohotels/leaf-ui#readme"
+  "homepage": "https://github.com/treebohotels/leaf-ui#readme",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
