--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
   },
   "dependencies": {
     "downshift": "1.20.0",
-    "formik": "0.10.3",
+    "formik": "0.10.5",
     "react-overlays": "0.8.3",
     "yup": "0.23.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "3.2.15",
-    "@storybook/addon-knobs": "3.2.15",
-    "@storybook/addon-options": "3.2.15",
-    "@storybook/react": "3.2.15",
+    "@storybook/addon-actions": "3.2.16",
+    "@storybook/addon-knobs": "3.2.16",
+    "@storybook/addon-options": "3.2.16",
+    "@storybook/react": "3.2.16",
     "babel-cli": "6.26.0",
     "babel-eslint": "8.0.2",
     "babel-jest": "21.2.0",
@@ -55,25 +55,25 @@
     "babel-preset-react": "6.24.1",
     "commitizen": "2.9.6",
     "cz-conventional-changelog": "2.1.0",
-    "eslint": "4.10.0",
+    "eslint": "4.12.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-react": "7.5.1",
     "husky": "0.14.3",
     "jest": "21.2.1",
     "lint-staged": "5.0.0",
     "npm-run-all": "4.1.2",
     "prop-types": "15.6.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "rimraf": "2.6.2",
+    "semantic-release": "8.2.0",
     "styled-components": "2.2.3",
-    "stylelint": "8.2.0",
-    "stylelint-config-standard": "17.0.0",
+    "stylelint": "8.3.1",
+    "stylelint-config-standard": "18.0.0",
     "stylelint-config-styled-components": "0.1.1",
-    "stylelint-processor-styled-components": "1.0.0",
-    "semantic-release": "8.2.0"
+    "stylelint-processor-styled-components": "1.1.1"
   },
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0.0",
