build(dependencies): update dependencies and make necessary changes

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -5,7 +5,8 @@
     "stylelint-config-styled-components"
   ],
   rules: {
-    "indentation": null
+    "indentation": null,
+    "comment-empty-line-before": null
   },
   "syntax": "scss"
 }
