--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "build:cjs": "NODE_ENV=cjs babel src -d lib --ignore *.test.js --ignore *.story.js",
     "precommit": "lint-staged",
     "commit": "git-cz",
-    "lint": "run-p lint:*",
-    "lint:eslint": "eslint .",
-    "lint:stylelint": "stylelint '**/*.js'",
     "test": "jest"
   },
   "files": [
@@ -26,8 +23,7 @@
   ],
   "lint-staged": {
     "*.js": [
-      "eslint",
-      "stylelint"
+      "test"
     ]
   },
   "dependencies": {
@@ -43,7 +39,7 @@
     "@storybook/react": "3.2.17",
     "babel-cli": "6.26.0",
     "babel-eslint": "8.0.3",
-    "babel-jest": "21.2.0",
+    "babel-jest": "22.0.3",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-plugin-styled-components": "1.3.0",
     "babel-plugin-syntax-trailing-function-commas": "6.22.0",
@@ -61,7 +57,9 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.5.1",
     "husky": "0.14.3",
-    "jest": "21.2.1",
+    "jest": "22.0.3",
+    "jest-runner-eslint": "0.3.0",
+    "jest-runner-stylelint": "1.0.0",
     "lint-staged": "6.0.0",
     "npm-run-all": "4.1.2",
     "prop-types": "15.6.0",
@@ -93,6 +91,18 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "jest": {
+    "projects": [
+      "jest.test.config.js",
+      "jest.eslint.config.js",
+      "jest.stylelint.config.js"
+    ]
+  },
+  "jest-runner-eslint": {
+    "cliOptions": {
+      "parser": "babel-eslint"
     }
   }
 }
