feat(react-native): add support to build react-native components
react-native versions of components are now exposed at leaf-ui/native

--- a/.babelrc
+++ b/.babelrc
@@ -33,6 +33,14 @@
         }],
         "react"
       ]
+    },
+    "development": {
+      "presets": [
+        "expo"
+      ],
+      "plugins": [
+        "transform-react-jsx-source"
+      ]
     }
   }
 }
