--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "module": "es/index.js",
   "scripts": {
     "start": "run-s storybook",
-    "storybook": "NODE_ENV=es start-storybook -p 9000",
+    "native": "react-native-scripts start",
+    "storybook": "NODE_ENV=es start-storybook -p 9000 -c ./storybook",
     "storybook:build": "NODE_ENV=cjs build-storybook -o docs",
+    "storybook:native": "storybook start -p 7007 -c ./storybook/native",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "build": "run-s build:clean && run-p build:es build:cjs",
     "build:clean": "rimraf es lib",
@@ -28,15 +30,19 @@
   },
   "dependencies": {
     "downshift": "1.22.5",
+    "expo": "23.0.4",
     "formik": "0.10.5",
+    "react": "16.0.0",
+    "react-native": "0.50.3",
     "react-overlays": "0.8.3",
     "yup": "0.23.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "3.2.18",
-    "@storybook/addon-knobs": "3.2.18",
-    "@storybook/addon-options": "3.2.18",
-    "@storybook/react": "3.2.18",
+    "@storybook/addon-actions": "3.3.1",
+    "@storybook/addon-knobs": "3.3.1",
+    "@storybook/addon-options": "3.3.1",
+    "@storybook/react": "3.3.1",
+    "@storybook/react-native": "3.3.1",
     "babel-cli": "6.26.0",
     "babel-eslint": "8.0.3",
     "babel-jest": "22.0.3",
@@ -63,8 +69,10 @@
     "lint-staged": "6.0.0",
     "npm-run-all": "4.1.2",
     "prop-types": "15.6.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "react-native": "0.50.3",
+    "react-native-scripts": "1.8.1",
     "rimraf": "2.6.2",
     "semantic-release": "8.2.0",
     "styled-components": "2.3.3",
@@ -76,7 +84,8 @@
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0.0",
     "react-dom": "^15.3.0 || ^16.0.0",
-    "styled-components": "^2.2.3"
+    "react-native": "^0.50.3",
+    "styled-components": "^2.3.3"
   },
   "repository": {
     "type": "git",
