--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "storybook": "NODE_ENV=es start-storybook -p 9000 -c ./storybook",
     "storybook:build": "NODE_ENV=cjs build-storybook -o docs",
     "storybook:native": "storybook start -p 7007 -c ./storybook/native",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "semantic-release": "semantic-release",
     "build": "run-s build:clean && run-p build:es build:cjs",
     "build:clean": "rimraf es lib",
     "build:es": "NODE_ENV=es babel src -d es --ignore *.test.js --ignore *.story.js",
@@ -38,16 +38,16 @@
     "yup": "0.23.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "3.3.1",
-    "@storybook/addon-knobs": "3.3.1",
-    "@storybook/addon-options": "3.3.1",
-    "@storybook/react": "3.3.1",
-    "@storybook/react-native": "3.3.1",
+    "@storybook/addon-actions": "3.3.2",
+    "@storybook/addon-knobs": "3.3.2",
+    "@storybook/addon-options": "3.3.2",
+    "@storybook/react": "3.3.2",
+    "@storybook/react-native": "3.3.2",
     "babel-cli": "6.26.0",
-    "babel-eslint": "8.0.3",
-    "babel-jest": "22.0.3",
+    "babel-eslint": "8.1.2",
+    "babel-jest": "22.0.4",
     "babel-plugin-external-helpers": "6.22.0",
-    "babel-plugin-styled-components": "1.3.0",
+    "babel-plugin-styled-components": "1.4.0",
     "babel-plugin-syntax-trailing-function-commas": "6.22.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-export-extensions": "6.22.0",
@@ -57,13 +57,13 @@
     "babel-preset-react": "6.24.1",
     "commitizen": "2.9.6",
     "cz-conventional-changelog": "2.1.0",
-    "eslint": "4.13.1",
+    "eslint": "4.14.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.5.1",
     "husky": "0.14.3",
-    "jest": "22.0.3",
+    "jest": "22.0.4",
     "jest-runner-eslint": "0.3.0",
     "jest-runner-stylelint": "1.0.0",
     "lint-staged": "6.0.0",
@@ -74,18 +74,18 @@
     "react-native": "0.50.3",
     "react-native-scripts": "1.8.1",
     "rimraf": "2.6.2",
-    "semantic-release": "8.2.0",
-    "styled-components": "2.3.3",
+    "semantic-release": "11.0.2",
+    "styled-components": "2.4.0",
     "stylelint": "8.4.0",
     "stylelint-config-standard": "18.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.2.1"
   },
   "peerDependencies": {
-    "react": "^15.3.0 || ^16.0.0",
-    "react-dom": "^15.3.0 || ^16.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-native": "^0.50.3",
-    "styled-components": "^2.3.3"
+    "styled-components": "^2.4.0"
   },
   "repository": {
     "type": "git",
