--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "build:cjs": "NODE_ENV=cjs babel src -d lib --ignore *.test.js --ignore *.story.js",
     "precommit": "lint-staged",
     "commit": "git-cz",
+    "lint": "run-p lint:*",
+    "lint:eslint": "eslint .",
+    "lint:stylelint": "stylelint '**/*.js'",
     "test": "jest"
   },
   "files": [
@@ -25,27 +28,26 @@
   ],
   "lint-staged": {
     "*.js": [
-      "test"
+      "eslint",
+      "stylelint"
     ]
   },
   "dependencies": {
-    "downshift": "1.22.5",
+    "downshift": "1.25.0",
     "expo": "23.0.4",
     "formik": "0.10.5",
-    "react": "16.0.0",
-    "react-native": "0.50.3",
     "react-overlays": "0.8.3",
-    "yup": "0.23.0"
+    "yup": "0.24.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "3.3.2",
-    "@storybook/addon-knobs": "3.3.2",
-    "@storybook/addon-options": "3.3.2",
-    "@storybook/react": "3.3.2",
-    "@storybook/react-native": "3.3.2",
+    "@storybook/addon-actions": "3.3.10",
+    "@storybook/addon-knobs": "3.3.10",
+    "@storybook/addon-options": "3.3.10",
+    "@storybook/react": "3.3.10",
+    "@storybook/react-native": "3.3.10",
     "babel-cli": "6.26.0",
-    "babel-eslint": "8.1.2",
-    "babel-jest": "22.0.4",
+    "babel-eslint": "8.2.1",
+    "babel-jest": "22.1.0",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-plugin-styled-components": "1.4.0",
     "babel-plugin-syntax-trailing-function-commas": "6.22.0",
@@ -57,16 +59,14 @@
     "babel-preset-react": "6.24.1",
     "commitizen": "2.9.6",
     "cz-conventional-changelog": "2.1.0",
-    "eslint": "4.14.0",
+    "eslint": "4.16.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.5.1",
     "husky": "0.14.3",
-    "jest": "22.0.4",
-    "jest-runner-eslint": "0.3.0",
-    "jest-runner-stylelint": "1.0.0",
-    "lint-staged": "6.0.0",
+    "jest": "22.1.4",
+    "lint-staged": "6.0.1",
     "npm-run-all": "4.1.2",
     "prop-types": "15.6.0",
     "react": "16.0.0",
@@ -79,7 +79,7 @@
     "stylelint": "8.4.0",
     "stylelint-config-standard": "18.0.0",
     "stylelint-config-styled-components": "0.1.1",
-    "stylelint-processor-styled-components": "1.2.1"
+    "stylelint-processor-styled-components": "1.2.2"
   },
   "peerDependencies": {
     "react": "^16.0.0",
@@ -100,18 +100,6 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "jest": {
-    "projects": [
-      "jest.test.config.js",
-      "jest.eslint.config.js",
-      "jest.stylelint.config.js"
-    ]
-  },
-  "jest-runner-eslint": {
-    "cliOptions": {
-      "parser": "babel-eslint"
     }
   }
 }
