--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "run-s storybook",
     "native": "react-native-scripts start",
     "storybook": "NODE_ENV=es start-storybook -p 9000 -c ./storybook",
+    "storybook:amp": "NODE_ENV=es start-storybook -p 9001 -c ./storybook/amp",
     "storybook:build": "NODE_ENV=cjs build-storybook -o docs -c ./storybook",
     "storybook:native": "storybook start -p 7007 -c ./storybook/native",
     "semantic-release": "semantic-release",
@@ -37,6 +38,7 @@
     "downshift": "1.30.0",
     "expo": "23.0.4",
     "formik": "0.11.4",
+    "react-helmet": "^5.2.0",
     "react-overlays": "0.8.3",
     "yup": "0.24.1"
   },
