build: npm scripts cleanup, web storybook config moved to /web, expose amp named imports

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "lib/web.js",
   "module": "es/web.js",
   "scripts": {
-    "start": "run-s storybook",
+    "web": "run-s web:storybook",
+    "web:storybook": "NODE_ENV=es start-storybook -p 9000 -c ./storybook/web",
+    "web:storybook:build": "NODE_ENV=cjs build-storybook -o docs -c ./storybook/web",
     "native": "react-native-scripts start",
-    "storybook": "NODE_ENV=es start-storybook -p 9000 -c ./storybook",
-    "storybook:amp": "NODE_ENV=es start-storybook -p 9001 -c ./storybook/amp",
-    "storybook:build": "NODE_ENV=cjs build-storybook -o docs -c ./storybook",
-    "storybook:native": "storybook start -p 7007 -c ./storybook/native",
+    "native:storybook": "storybook start -p 7007 -c ./storybook/native",
+    "amp": "run-s amp:storybook",
+    "amp:storybook": "NODE_ENV=es start-storybook -p 9001 -c ./storybook/amp",
+    "amp:storybook:build": "NODE_ENV=cjs build-storybook -o docs -c ./storybook/amp",
     "semantic-release": "semantic-release",
     "build": "run-s build:clean && run-p build:es build:cjs",
     "build:clean": "rimraf es lib",
