--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "semantic-release": "semantic-release",
     "build": "run-s build:clean && run-p build:es build:cjs",
     "build:clean": "rimraf es cjs",
-    "build:es": "NODE_ENV=es babel src -d es --ignore *.test.js --ignore *.story.js",
-    "build:cjs": "NODE_ENV=cjs babel src -d cjs --ignore *.test.js --ignore *.story.js",
+    "build:es": "NODE_ENV=es babel src -d es --ignore *.test.js --ignore *.story.js --ignore makeStories.js",
+    "build:cjs": "NODE_ENV=cjs babel src -d cjs --ignore *.test.js --ignore *.story.js --ignore makeStories.js",
     "build:prepare": "node ./src/scripts/buildPrepare.js",
     "precommit": "lint-staged",
     "commit": "git-cz",
@@ -56,6 +56,7 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "commitizen": "2.9.6",
     "cz-conventional-changelog": "2.1.0",
     "eslint": "4.18.2",
