refactor(build): cleaner build script, consistent babelrc plugin order

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "semantic-release": "semantic-release",
     "build": "run-s build:clean && run-p build:es build:cjs",
     "build:clean": "rimraf es cjs",
-    "build:es": "NODE_ENV=es babel src -d es --ignore *.test.js --ignore *.story.js --ignore makeStories.js",
-    "build:cjs": "NODE_ENV=cjs babel src -d cjs --ignore *.test.js --ignore *.story.js --ignore makeStories.js",
+    "build:es": "NODE_ENV=es babel src -d es --ignore *.test.js,*.story.js,makeStories.js",
+    "build:cjs": "NODE_ENV=cjs babel src -d cjs --ignore *.test.js,*.story.js,makeStories.js",
     "build:prepare": "node ./src/scripts/buildPrepare.js",
     "precommit": "lint-staged",
     "commit": "git-cz",
