--- a/package.json
+++ b/package.json
@@ -87,6 +87,16 @@
     "react-native": "^0.50.3",
     "styled-components": "^3.2.6"
   },
+  "keywords": [
+    "react",
+    "react-native",
+    "web",
+    "amp",
+    "components",
+    "styled-components",
+    "theme",
+    "design-system"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/treebohotels/leaf-ui.git"
