chore(package.json): add keyword ui-library
closes #69

--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "components",
     "styled-components",
     "theme",
-    "design-system"
+    "design-system",
+    "ui-library"
   ],
   "repository": {
     "type": "git",
