Fixed version for addon-centered

--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     ]
   },
   "dependencies": {
-    "@storybook/addon-centered": "^3.4.3",
     "downshift": "1.31.12",
     "expo": "23.0.4",
     "formik": "0.11.11",
@@ -40,6 +39,7 @@
     "yup": "0.24.1"
   },
   "devDependencies": {
+    "@storybook/addon-centered": "3.4.3",
     "@storybook/addon-actions": "3.4.3",
     "@storybook/addon-knobs": "3.4.3",
     "@storybook/addon-options": "3.4.3",
