--- a/package.json
+++ b/package.json
@@ -112,5 +112,38 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "files": [
+    "cjs/**/*",
+    "es/**/*",
+    "Accordion/**/*",
+    "Button/**/*",
+    "Card/**/*",
+    "Checkbox/**/*",
+    "Divider/**/*",
+    "Dropdown/**/*",
+    "Flex/**/*",
+    "Form/**/*",
+    "Gallery/**/*",
+    "Icon/**/*",
+    "Image/**/*",
+    "Link/**/*",
+    "List/**/*",
+    "Modal/**/*",
+    "MoreOrLess/**/*",
+    "Notification/**/*",
+    "Position/**/*",
+    "Price/**/*",
+    "RadioButton/**/*",
+    "Select/**/*",
+    "Spacer/**/*",
+    "Table/**/*",
+    "Tabs/**/*",
+    "Tag/**/*",
+    "Text/**/*",
+    "TextInput/**/*",
+    "Toggle/**/*",
+    "Tooltip/**/*",
+    "theme.js"
+  ]
 }
