feat(unit tests): added unit tests(jest & enzyme)
fix #86

--- a/.babelrc
+++ b/.babelrc
@@ -43,6 +43,25 @@
       "plugins": [
         "transform-react-jsx-source"
       ]
+    },
+    "test": {
+      "plugins": [
+        "transform-export-extensions",
+        "transform-class-properties",
+        "transform-object-rest-spread",
+        "syntax-trailing-function-commas",
+        ["transform-runtime", {
+          "polyfill": false
+        }],
+        "styled-components"
+      ],
+      "presets": [
+        ["env", {
+          "loose": true,
+          "modules": "commonjs"
+        }],
+        "react"
+      ]
     }
   }
 }
