--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "mkdirp": "0.5.1",
     "npm-run-all": "4.1.2",
     "prop-types": "15.6.1",
+    "raw-loader": "0.5.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-native": "0.50.3",
