--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "date-fns": "1.29.0",
     "downshift": "1.31.12",
-    "expo": "23.0.4",
+    "expo": "28.0.0",
     "formik": "0.11.11",
     "react-day-picker": "7.1.9",
     "react-helmet": "5.2.0",
@@ -72,9 +72,9 @@
     "npm-run-all": "4.1.2",
     "prop-types": "15.6.1",
     "raw-loader": "0.5.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-native": "0.50.3",
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-scripts": "1.8.1",
     "rimraf": "2.6.2",
     "semantic-release": "11.0.2",
@@ -85,9 +85,9 @@
     "stylelint-processor-styled-components": "1.3.1"
   },
   "peerDependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-native": "^0.50.3",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-native": "^0.55.4",
     "styled-components": "^3.2.6"
   },
   "keywords": [
