fix(card/native): fix card for native along with refactors

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
     "react/require-default-props": ["off"],
     "global-require": ["off"],
-    "no-console": ["warn"]
+    "no-console": ["warn"],
+    "no-multi-str": ["warn"],
   }
 }
