--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "raw-loader": "0.5.1",
     "react": "16.3.1",
     "react-dom": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native": "0.55.4",
     "react-native-scripts": "1.8.1",
     "rimraf": "2.6.2",
     "semantic-release": "11.0.2",
