--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "downshift": "2.1.1",
     "expo": "28.0.0",
     "formik": "0.11.11",
+    "lodash": "4.17.10",
     "react-day-picker": "7.1.9",
     "react-helmet": "5.2.0",
     "react-overlays": "0.8.3",
