fix(card/native): PR fix - remove no-multi-str rule from eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,6 @@
     "react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
     "react/require-default-props": ["off"],
     "global-require": ["off"],
-    "no-console": ["warn"],
-    "no-multi-str": ["warn"],
+    "no-console": ["warn"]
   }
 }
