--- a/.eslintrc
+++ b/.eslintrc
@@ -19,8 +19,6 @@
     "jsx-a11y/no-static-element-interactions": ["off"],
     "react/forbid-prop-types": ["error", { "forbid": ["any"] }],
     "react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
-    "react/require-default-props": ["off"],
-    "global-require": ["off"],
-    "no-console": ["warn"]
+    "react/require-default-props": ["off"]
   }
 }
