--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0, "maxBOF": 0 }],
     "object-curly-newline": ["error", { "consistent": true }],
     "import/no-extraneous-dependencies": ["off"],
+    "import/prefer-default-export": ["off"],
     "jsx-a11y/click-events-have-key-events": ["off"],
     "jsx-a11y/label-has-for": ["error", { "required": { "every": [ "id" ] }, "allowChildren": true }],
     "jsx-a11y/no-noninteractive-element-interactions": ["off"],
