--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-dom": "16.5.2",
     "react-native": "0.55.4",
     "react-native-scripts": "1.8.1",
+    "react-native-size-matters": "0.1.3",
     "rimraf": "2.6.2",
     "semantic-release": "11.0.2",
     "styled-components": "3.2.6",
