--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-day-picker": "7.2.4",
     "react-helmet": "5.2.0",
     "react-overlays": "0.8.3",
+    "react-native-size-matters": "0.1.3",
     "react-tiny-virtual-list": "2.2.0",
     "yup": "0.24.1"
   },
