feat(Form): AmountSchema added to yup

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "operator-linebreak": ["off"],
     "import/no-extraneous-dependencies": ["off"],
     "import/no-useless-path-segments": ["off"],
+    "import/prefer-default-export": ["off"],
     "jsx-a11y/click-events-have-key-events": ["off"],
     "jsx-a11y/label-has-for": ["error", { "required": { "every": [ "id" ] }, "allowChildren": true }],
     "jsx-a11y/no-noninteractive-element-interactions": ["off"],
