--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "web": "run-s web:storybook",
     "web:storybook": "start-storybook -p 9000 -c ./storybook/web",
     "web:storybook:build": "NODE_ENV=cjs build-storybook -o docs -c ./storybook/web",
-    "native": "react-native-scripts start",
-    "native:storybook": "storybook start -p 7007 -c ./storybook/native/config.js",
+    "native": "expo r -c",
     "amp": "run-s amp:storybook",
     "amp:storybook": "start-storybook -p 9001 -c ./storybook/amp",
     "amp:storybook:build": "NODE_ENV=cjs build-storybook -o docs -c ./storybook/amp",
@@ -33,7 +32,7 @@
   "dependencies": {
     "date-fns": "1.30.1",
     "downshift": "2.2.2",
-    "expo": "28.0.0",
+    "expo": "32.0.0",
     "formik": "0.11.11",
     "lodash": "4.17.11",
     "react-day-picker": "7.2.4",
@@ -79,8 +78,7 @@
     "raw-loader": "0.5.1",
     "react": "16.7.0",
     "react-dom": "16.7.0",
-    "react-native": "0.55.4",
-    "react-native-scripts": "1.8.1",
+    "react-native": "0.57.8",
     "rimraf": "2.6.3",
     "semantic-release": "11.0.2",
     "styled-components": "3.2.6",
@@ -92,7 +90,7 @@
   "peerDependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-native": "^0.55.4",
+    "react-native": "^0.57.8",
     "styled-components": "^3.2.6"
   },
   "keywords": [
