--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@storybook/addon-knobs": "5.0.5",
     "@storybook/react": "5.0.5",
     "@storybook/react-native": "4.1.11",
+    "@storybook/theming": "5.0.5",
     "babel-eslint": "9.0.0",
     "babel-jest": "24.0.0",
     "babel-plugin-styled-components": "1.10.0",
@@ -77,8 +78,8 @@
     "npm-run-all": "4.1.5",
     "prop-types": "15.6.2",
     "raw-loader": "0.5.1",
-    "react": "16.8.5",
-    "react-dom": "16.8.5",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-native": "0.57.8",
     "rimraf": "2.6.3",
     "semantic-release": "11.0.2",
