fix(scripts): modify buildPrepare.js

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "semantic-release": "semantic-release",
     "build": "run-s build:clean && run-p build:es build:cjs",
     "build:clean": "rimraf es cjs",
-    "build:es": "babel src -d es --ignore *.test.js,*.story.js,makeStories.js",
-    "build:cjs": "NODE_ENV=cjs babel src -d cjs --ignore *.test.js,*.story.js,makeStories.js",
+    "build:es": "babel src -d es --ignore *.test.js,*.story.js",
+    "build:cjs": "NODE_ENV=cjs babel src -d cjs --ignore *.test.js,*.story.js",
     "build:prepare": "node ./src/scripts/buildPrepare.js",
     "precommit": "lint-staged",
     "commit": "git-cz",
@@ -122,5 +122,44 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "files": [
+    "cjs/**/*",
+    "es/**/*",
+    "Accordion/**/*",
+    "Button/**/*",
+    "Card/**/*",
+    "Checkbox/**/*",
+    "DatePickerInput/**/*",
+    "DateRangePickerInput/**/*",
+    "Divider/**/*",
+    "Dropdown/**/*",
+    "Flex/**/*",
+    "Form/**/*",
+    "Gallery/**/*",
+    "Icon/**/*",
+    "Image/**/*",
+    "Link/**/*",
+    "List/**/*",
+    "Modal/**/*",
+    "MoreOrLess/**/*",
+    "Notification/**/*",
+    "Position/**/*",
+    "Price/**/*",
+    "RadioButton/**/*",
+    "Select/**/*",
+    "Size/**/*",
+    "Space/**/*",
+    "Table/**/*",
+    "Tabs/**/*",
+    "Tag/**/*",
+    "Text/**/*",
+    "TextArea/**/*",
+    "TextInput/**/*",
+    "Toggle/**/*",
+    "Tooltip/**/*",
+    "View/**/*",
+    "theme/**/*",
+    "theme.js"
+  ]
 }
